UI improvements, undo/redo fixes, font-size fix, border-drawing improved, etc.
Many new variables available.
Redesigned style editor (stylist), now all in one dialog.
When changing a style, only the changes are applied to existing paragraphs (not the whole style).
Fixed drawing and printing of embedded objects.
Respect user's color scheme.
Improved visual appearance (page shape, with shadow).

Changes between KWord-1.1-beta2 and KWord-1.1-beta3 (under development)
===================================================

New view mode: preview (multiple pages per row)
Inline items (variables, images, frames) are now correctly drawn when selected,
can be made non-inline and back.
Improved readonly mode, when embedding into konqueror (can now select and copy).
Insert Frame/Page Break feature added (also as part of styles).
Apply button added to the stylist.
Zoom value can be set arbitrarily by the user (editable combobox).
Auto-correction, typographical quotes.
Formatting Characters feature.
"1.5 lines" and "double" linespacing (also as part of styles).
Insertion of predefined expressions (configurable).
Auto-switching between editing of text and editing of frames.
All types of frames can be set as "copy".
Flesch reading ease score and enhanced layout added to the statistics dialog.
Insert clipart (WMF).
More spellchecking options (needs kdelibs-2.2-cvs).
Added the ability for frames to grow and shrink when more or less text flows in them.
Added undo-redo availability to many user-actions.
New bullets-numbering dialog (visible in the stylist and the paragraph editor)
Enhanced context-menus (Right mouse buttons popup)
Added the possibility to change the case (capitals) of a selection of text.

Useability improvements (better mouse selection, a few new keybindings).
Custom variables appear in a submenu.
Major speedups for long documents (paragraph formatting, loading),
and painting fixes.
Fixed recalculation of "page number" variable in header or footer.